# trajtok

./: .gitignore  CITATION.bib  README.md
assets/qual/: CREDITS.md
release/: prep_ckpt.py  segmenter_MODEL_CARD.md  trajvitv2_MODEL_CARD.md  upload_to_hf.py
segmenter/: README.md  pyproject.toml
segmenter/configs/: pretrain.yaml
segmenter/scripts/: demo_image.py  download_ckpt.py  eval_davis.py  eval_mose.py  eval_ytvis.py  train.sh
segmenter/trajtok_segmenter/data/: __init__.py  base_dataset.py  caption_dataset.py  collate.py  dataloader.py  sa1b_dataset.py  sav_dataset.py  template.py  video_utils.py
segmenter/trajtok_segmenter/eval/: eval_segmenter.py  seg_metric.py
segmenter/trajtok_segmenter/model/: checkpoint_utils.py  model_pretrain.py  model_retrieval_base.py  sam_mask_decoder.py  segmenter.py  tensors.py  traj_perceiver.py  traj_pos_embed.py  traj_transformer.py  two_way_attention.py  vit_attn.py
segmenter/trajtok_segmenter/model/backbones/: dinov3_convnext.py
segmenter/trajtok_segmenter/text/: tokenization_bert.py  xbert.py
segmenter/trajtok_segmenter/train/: basic_utils.py  config_utils.py  distributed.py  hungarian.py  logger.py  optimizer.py  pretrain.py  retrieval_utils.py  shared_utils.py
trajvitv2/: README.md  pyproject.toml
trajvitv2/configs/: pretrain.yaml
trajvitv2/scripts/: download_ckpt.py  eval_imagenet_zeroshot.py  eval_video_retrieval.py  train.sh
trajvlm/: .gitignore  Dockerfile  README.md  pyproject.toml
trajvlm/launch_scripts/: eval.py  sft.py  trajvlm_pretrain.py  trajvlm_sft.py
trajvlm/olmo/: html_utils.py  io.py  model_configs.py  registry.py  torch_util.py
trajvlm/olmo/data/: academic_multi_image_datasets.py  academic_video_datasets.py  academic_video_track_datasets.py  data_loader.py  dataset.py  get_dataset.py  iterable_dataset_mixture.py  molmo_hardcode.py  pixmo_datasets.py  text_datasets.py  utils.py  video_loader.py
trajvlm/olmo/data/dataset_builders/: ai2d.py  count_bench_qa.py  download_urls.py
trajvlm/olmo/eval/: dream_caption_utils.py  evaluators.py  llm_judge_utils.py  loss_evaluator.py  mmmu_eval_utils.py  model_evaluator.py  object_tracking_utils.py  open_ended_qa_eval.py  point_tracking_utils.py  pointing_e2e_utils.py  temp_compass_utils.py  tomato_eval.py  video_caption_utils.py  vixmo_caption_utils.py  vqa.py  vsi_bench_utils.py
trajvlm/olmo/hf_model/: configuration_molmo2.py  convert_molmo2_to_hf.py  modeling_molmo2.py  test_molmo2.py
trajvlm/olmo/models/molmo/: molmo.py
trajvlm/olmo/models/molmo2/: molmo2.py  molmo2_preprocessor.py
trajvlm/olmo/nn/: beam_search.py  legacy_config.py  llm.py  siglip2_trajgroup_vision_backbone.py  temporal_image_vit.py  temporal_vision_backbone.py  trajvit_dinov3.py  trajvit_vision_backbone.py  ulysses.py  vision_backbone.py
trajvlm/olmo/preprocessing/: data_formatter.py  detect_counting_question.py  multimodal_collator.py  multimodal_preprocessor.py  multiple_choice_templates.py  point_formatter.py  preprocessor_utils.py  text_preprocessor.py  trajvit_preprocessor.py
trajvlm/olmo/train/: distributed_checkpointing.py  optim.py  run_trainer.py  trainer.py  trainer_config.py
trajvlm/scripts/: apply_molmo2_patches.py  extract_coin_clips.py  extract_ego4d_clips.py  extract_epic_kitchens_clips.py  prepare_pretrained_model.py  pretrain.sh  sft.sh  unified_demo.py
trajvlm/tests/: inspect_trajvlm_sequence.py  smoke_trajvit_forward.py  smoke_trajvlm_model.py
trajvlm/tests/preprocessing/: test_data_formatter.py  test_detect_counting_question.py  test_frame_sampling.py  test_point_formatter.py
trajvlm/trajtok_trajvlm/launch_scripts/: trajvlm_pretrain.py  trajvlm_sft.py
trajvlm/trajtok_trajvlm/nn/: siglip2_trajgroup_vision_backbone.py  trajvit_dinov3.py  trajvit_perceiver.py
trajvlm/trajtok_trajvlm/preprocessing/: trajvit_preprocessor.py
