[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajtok-segmenter"
version = "0.1.0"
description = "Trajectory segmenter from TrajTok-v2 — DINOv3 + perceiver + soft-mask object grouping"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Chenhao Zheng" }]
keywords = ["video segmentation", "trajectory tokens", "perceiver", "DINOv3", "vision-language"]

dependencies = [
  "torch>=2.1",
  "torchvision",
  "numpy",
  "einops",
  "Pillow",
  "PyYAML",
  "easydict",
  "transformers>=4.40",
  "decord",
  "av",
  "opencv-python",
  "scipy",
  "scikit-image",
  "tqdm",
  "rotary-embedding-torch",
  "huggingface_hub",
  "webdataset",
  "wandb",
  "omegaconf",
]

[project.optional-dependencies]
dev = ["ruff", "black", "pytest"]

[tool.setuptools.packages.find]
include = ["trajtok_segmenter*"]
